--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1,6 +1,42 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Link|Notes|\n",
+    "|---|---|\n",
+    "|https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.lognorm.html|Scipy Lognormal Distribution|\n",
+    "|https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.logistic.html|Scipy Logistic Distribution|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.7.6 64-bit ('phd': conda)",
+   "language": "python",
+   "name": "python37664bitphdcondab24623704836426aa66db115e96068bb"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
