--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "|Link|Notes|\n",
     "|---|---|\n",
-    "|https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.lognorm.html|Scipy Lognormal Distribution|\n",
-    "|https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.logistic.html|Scipy Logistic Distribution|"
+    "|https://finance.yahoo.com/news/hell-coming-mathematical-proof-185019616.html|Basic spread models|\n",
+    "|https://www.insidermonkey.com/blog/donald-trump-has-3-3-percent-chance-of-dying-from-coronavirus-817781/|Basic risk mdoel|"
    ]
   },
   {
