verified reading water systems corectly

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -118,6 +118,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PWS ID                                          WY5601140\n",
+      "PWS Name                  BLM FONTENELLE CREEK CAMPGROUND\n",
+      "PWS Type                   Transient non-community system\n",
+      "Primary Source                               Ground water\n",
+      "Counties Served                       Lincoln, Sweetwater\n",
+      "Cities Served                                ROCK SPRINGS\n",
+      "PopulationServed Count                                 25\n",
+      "Number of Facilities                                    7\n",
+      "Number of Violations                                    6\n",
+      "Number of Site Visits                                   7\n",
+      "State                                                  WY\n",
+      "Name: 453, dtype: object\n",
+      "PWS ID                                         WY5600688\n",
+      "PWS Name                           MEADOWLARK LAKE LODGE\n",
+      "PWS Type                  Transient non-community system\n",
+      "Primary Source                              Ground water\n",
+      "Counties Served                       Big Horn, Washakie\n",
+      "Cities Served                                    WORLAND\n",
+      "PopulationServed Count                               154\n",
+      "Number of Facilities                                   4\n",
+      "Number of Violations                                  15\n",
+      "Number of Site Visits                                  6\n",
+      "State                                                 WY\n",
+      "Name: 612, dtype: object\n",
+      "PWS ID                                         WY5600952\n",
+      "PWS Name                    WY DOT-STAR VALLEY REST AREA\n",
+      "PWS Type                  Transient non-community system\n",
+      "Primary Source                              Ground water\n",
+      "Counties Served                      Lincoln, Sweetwater\n",
+      "Cities Served                                      AFTON\n",
+      "PopulationServed Count                               100\n",
+      "Number of Facilities                                   7\n",
+      "Number of Violations                                   2\n",
+      "Number of Site Visits                                  8\n",
+      "State                                                 WY\n",
+      "Name: 753, dtype: object\n",
+      "PWS ID                                         WY5680084\n",
+      "PWS Name                           YELLOWSTONE NP NORRIS\n",
+      "PWS Type                  Transient non-community system\n",
+      "Primary Source                             Surface water\n",
+      "Counties Served                              Park, Teton\n",
+      "Cities Served                             YELLOWSTONE NP\n",
+      "PopulationServed Count                             1,515\n",
+      "Number of Facilities                                  10\n",
+      "Number of Violations                                   4\n",
+      "Number of Site Visits                                  8\n",
+      "State                                                 WY\n",
+      "Name: 770, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,row in df.iterrows():\n",
+    "    if \",\" in row[\"Counties Served\"]:\n",
+    "        print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
