national facilities has huc codes which is also super useful

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -489,6 +489,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          19020401.0\n",
+       "1          19020401.0\n",
+       "2          19020401.0\n",
+       "3          19040506.0\n",
+       "4          19010102.0\n",
+       "              ...    \n",
+       "4224068           NaN\n",
+       "4224069           NaN\n",
+       "4224070           NaN\n",
+       "4224071           NaN\n",
+       "4224072           NaN\n",
+       "Name: HUC_CODE, Length: 4224073, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nationalFacilities[\"HUC_CODE\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
