setting up structure

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -65,6 +65,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Water Treatment Systems"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -181,6 +188,13 @@
     "for i,row in df.iterrows():\n",
     "    if \",\" in row[\"Counties Served\"]:\n",
     "        print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### National Facilities"
    ]
   },
   {
@@ -516,6 +530,13 @@
    ],
    "source": [
     "nationalFacilities[\"HUC_CODE\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basemap Data"
    ]
   },
   {
