--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -54,7 +54,8 @@
    "outputs": [],
    "source": [
     "folder_WaterSystems = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\drinkingwater\\\\watersystems\"\n",
-    "csv_FacilityFiles = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\drinkingwater\\\\national_combined\\\\NATIONAL_FACILITY_FILE.CSV\""
+    "csv_FacilityFiles = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\drinkingwater\\\\national_combined\\\\NATIONAL_FACILITY_FILE.CSV\"\n",
+    "shp_USCounties = \"C:\\\\Users\\\\garfink2\\\\Documents\\\\data\\\\basemap\\\\tl_2017_us_county\\\""
    ]
   },
   {
@@ -544,7 +545,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gdf_USCounties = gpd.read_file()"
+   ]
   }
  ],
  "metadata": {
