--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -770,6 +770,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Map water systems to US counties"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
