calculating how many water supplies serve more than one county

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -1116,6 +1116,38 @@
    "source": [
     "df_AllStateWaterSupplies"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nCountiesServed = {}\n",
+    "for i,row in df_AllStateWaterSupplies.iterrows():\n",
+    "    counties = row[\"Counties Served\"].split(\",\")\n",
+    "    nCounties = len(counties)\n",
+    "    if nCounties in nCountiesServed.keys():\n",
+    "        nCountiesServed[nCounties] += 1\n",
+    "    else:\n",
+    "        nCountiesServed[nCounties] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nCountiesServed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
