set max display columns

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -41,6 +41,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.display.max_columns = 999"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1119,11 +1128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "nCountiesServed = {}\n",
+    "list_NCountiesSr\n",
     "for i,row in df_AllStateWaterSupplies.iterrows():\n",
     "    counties = row[\"Counties Served\"].split(\",\")\n",
     "    nCounties = len(counties)\n",
@@ -1135,9 +1145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 143738, 2: 97, 3: 32, 6: 2, 4: 10, 8: 3, 5: 3, 7: 3, 10: 1}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nCountiesServed"
    ]
