added column for number of counties served

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -1128,19 +1128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "nCountiesServed = {}\n",
-    "list_NCountiesSr\n",
+    "list_NCountiesServed = []\n",
     "for i,row in df_AllStateWaterSupplies.iterrows():\n",
     "    counties = row[\"Counties Served\"].split(\",\")\n",
     "    nCounties = len(counties)\n",
+    "    list_NCountiesServed.append(nCounties)\n",
     "    if nCounties in nCountiesServed.keys():\n",
     "        nCountiesServed[nCounties] += 1\n",
     "    else:\n",
-    "        nCountiesServed[nCounties] = 1"
+    "        nCountiesServed[nCounties] = 1\n",
+    "df_AllStateWaterSupplies[\"Number of Counties Served\"] = list_NCountiesServed"
    ]
   },
   {
