decided to staff

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,6 +1163,105 @@
    ],
    "source": [
     "nCountiesServed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PWS ID</th>\n",
+       "      <th>PWS Name</th>\n",
+       "      <th>PWS Type</th>\n",
+       "      <th>Primary Source</th>\n",
+       "      <th>Counties Served</th>\n",
+       "      <th>Cities Served</th>\n",
+       "      <th>PopulationServed Count</th>\n",
+       "      <th>Number of Facilities</th>\n",
+       "      <th>Number of Violations</th>\n",
+       "      <th>Number of Site Visits</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>Number of Counties Served</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>113166</th>\n",
+       "      <td>SD4601089</td>\n",
+       "      <td>WEB WATER DEVELOPMENT ASSOCIATION</td>\n",
+       "      <td>Community water system</td>\n",
+       "      <td>Surface water</td>\n",
+       "      <td>Brown, Campbell, Day, Edmunds, Faulk, Marshall...</td>\n",
+       "      <td>ABERDEEN, EUREKA</td>\n",
+       "      <td>16,568</td>\n",
+       "      <td>32</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>SD</td>\n",
+       "      <td>South Dakota</td>\n",
+       "      <td>SD</td>\n",
+       "      <td>46</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           PWS ID                           PWS Name                PWS Type  \\\n",
+       "113166  SD4601089  WEB WATER DEVELOPMENT ASSOCIATION  Community water system   \n",
+       "\n",
+       "       Primary Source                                    Counties Served  \\\n",
+       "113166  Surface water  Brown, Campbell, Day, Edmunds, Faulk, Marshall...   \n",
+       "\n",
+       "           Cities Served PopulationServed Count  Number of Facilities  \\\n",
+       "113166  ABERDEEN, EUREKA                 16,568                    32   \n",
+       "\n",
+       "        Number of Violations  Number of Site Visits State          Name  \\\n",
+       "113166                     4                      8    SD  South Dakota   \n",
+       "\n",
+       "       Postal Code  FIPS  Number of Counties Served  \n",
+       "113166          SD    46                         10  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_AllStateWaterSupplies[df_AllStateWaterSupplies[\"Number of Counties Served\"] == 10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kludge- make the decision to assign water systems to the first county in their list so that I'm not multiple-counting staffing"
    ]
   },
   {
