assigned first county served to each water supply

--- a/Water Systems.ipynb
+++ b/Water Systems.ipynb
@@ -1128,21 +1128,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "nCountiesServed = {}\n",
     "list_NCountiesServed = []\n",
+    "list_FirstCountiesServed = []\n",
     "for i,row in df_AllStateWaterSupplies.iterrows():\n",
     "    counties = row[\"Counties Served\"].split(\",\")\n",
     "    nCounties = len(counties)\n",
     "    list_NCountiesServed.append(nCounties)\n",
+    "    list_FirstCountiesServed.append(counties[0])\n",
     "    if nCounties in nCountiesServed.keys():\n",
     "        nCountiesServed[nCounties] += 1\n",
     "    else:\n",
     "        nCountiesServed[nCounties] = 1\n",
-    "df_AllStateWaterSupplies[\"Number of Counties Served\"] = list_NCountiesServed"
+    "df_AllStateWaterSupplies[\"Number of Counties Served\"] = list_NCountiesServed\n",
+    "df_AllStateWaterSupplies[\"First County Served\"] = list_FirstCountiesServed"
    ]
   },
   {
